--- a/index.html
+++ b/index.html
@@ -8,18 +8,159 @@
     <!-- Daisy UI and Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tailwind custom class -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
+            }
+        }
+    </script>
+    <!-- Font awesome kit -->
+    <script src="https://kit.fontawesome.com/b7903cb9e0.js" crossorigin="anonymous"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
     <!-- header -->
-    <header>
-
+    <header class="container mx-auto my-24">
+        <div class="hero">
+            <div class="hero-content flex-col-reverse lg:flex-row">
+                <div>
+                    <h1 class="text-5xl font-extrabold md:text-8xl lg:text-8xl">It's good <br>
+                        tea time at The <br>Tea House</h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                    </p>
+                    <button class="btn text-white bg-gradient-to-r from-violet-500 to-fuchsia-500">Explore More <i
+                            class="fa-solid fa-square-arrow-up-right"></i></button>
+                </div>
+                <div>
+                    <img src="images/banner.png" class="max-w-sm rounded-lg w-full" />
+                    <!-- banner badge -->
+                    <div
+                        class="flex items-center gap-5 py-4 px-3 rounded-md drop-shadow-lg shadow-lg w-60 -mt-20 bg-white">
+                        <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+                        <div>
+                            <h3 class="text-3xl font-bold">5.00</h3>
+                            <p>Trust Pilot Ratings</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <!-- main -->
-    <main>
-
+    <main class="container mx-auto">
+        <!-- Our Featured Products -->
+        <section class="my-24">
+            <div class="w-1/2 mx-auto space-y-4">
+                <h1 class="text-5xl text-center font-extrabold">Our Featured Products</h1>
+                <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    slightly believable. </p>
+            </div>
+            <!-- tea cart -->
+            <div class="grid lg:grid-cols-4 grid-cols-1 md:grid-cols-2 gap-10 my-3">
+                <!-- tea 1 -->
+                <div class="card bg-base-100 bg-gradient-to-b from-gray-200 to-gray-50 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/tea-1.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center space-y-3">
+                        <h2 class="card-title text-3xl font-extrabold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions">
+                            <button class="btn text-white bg-gradient-to-r from-violet-500 to-fuchsia-500">Buy
+                                Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- tea 2 -->
+                <div class="card bg-base-100 bg-gradient-to-b from-gray-200 to-gray-50 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/tea-2.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center space-y-3">
+                        <h2 class="card-title text-3xl font-extrabold">Black Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions">
+                            <button class="btn text-white bg-gradient-to-r from-violet-500 to-fuchsia-500">Buy
+                                Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- tea 3 -->
+                <div class="card bg-base-100 bg-gradient-to-b from-gray-200 to-gray-50 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/tea-3.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center space-y-3">
+                        <h2 class="card-title text-3xl font-extrabold">Lemon Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions">
+                            <button class="btn text-white bg-gradient-to-r from-violet-500 to-fuchsia-500">Buy
+                                Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- tea 4 -->
+                <div class="card bg-base-100 bg-gradient-to-b from-gray-200 to-gray-50 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/tea-4.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center space-y-3">
+                        <h2 class="card-title text-3xl font-extrabold">Green Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions">
+                            <button class="btn text-white bg-gradient-to-r from-violet-500 to-fuchsia-500">Buy
+                                Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Great Tea, Freshly Presented -->
+        <section class="my-24">
+            <div class="flex flex-col lg:flex-row gap-12 flex-1">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
+                    <div class="bg-gradient-to-r from-amber-200 to-amber-100 h-32 rounded-xl">
+                    </div>
+                    <div class="bg-gradient-to-r from-orange-200 to-orange-100 row-span-2 rounded-xl">
+                        <img class="w-full p-10" src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="bg-gradient-to-r from-green-200 to-green-100 row-span-2 rounded-xl">
+                        <img class="w-full p-10" src="images/fresh-2.png" alt="">
+                    </div>
+                    <div class="bg-gradient-to-r from-gray-200 to-gray-100 h-32 rounded-xl">
+                    </div>
+                </div>
+                <div class="space-y-5 flex-1 mt-3">
+                    <div>
+                        <h1 class="text-5xl font-extrabold mb-2">Great Tea, Freshly <br> Presented</h1>
+                        <p class="py-6">The meaning of gong cha is chanese is to provide the best tea to emperor
+                            from all possessions . It represents the highest quality and self expectation.
+                            Establishing in 2006, Gong cha had been deeply appreciated by its custoers because of
+                            good words of mouth and unique customized service orginated from Taiwan. It represents the highest quality and self expectation.
+                            Establishing in 2006, Gong cha had been deeply appreciated by its custoers because of
+                            good words of mouth and unique customized service orginated from Taiwan.</p>
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-extrabold mb-3">Unique Taste</h3>
+                        <p>A Unique and different style from other teapots gives a luxurious and minimalist impression. <br> A Unique and different style from other teapots gives a luxurious.
+                        </p>
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-extrabold mb-3">Premium Quality</h3>
+                        <p>Premium Quality that makes tea more elegant and more durable when you use it. Premium Quality <br> that makes tea more elegant and more durable when you use it.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer>
