--- a/index.html
+++ b/index.html
@@ -161,6 +161,23 @@
                 </div>
             </div>
         </section>
+        <!-- Super client section -->
+        <section>
+            <div class="flex flex-col lg:flex-row gap-8 bg-gradient-to-r from-orange-500 to-red-600 p-10 rounded-xl">
+                <div class="text-white space-y-5">
+                    <h1 class="text-5xl font-extrabold">Meet Our Super <br> Clients</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <button class="bg-white font-bold rounded text-orange-500 py-3 px-5">Show All</button>
+                </div>
+                <!-- review -->
+                <div class="bg-white p-10 rounded-xl space-y-4 relative">
+                    <img class="absolute -top-7 -left-7 border-4 border-white rounded-full" src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h3 class="font-bold">Ilham Yuda</h3>
+                    <p>Businessman</p>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer>
