news letter section done

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <!-- tea 1 -->
                 <div class="card bg-base-100 bg-gradient-to-b from-gray-200 to-gray-50 shadow-xl">
                     <figure class="px-10 pt-10">
-                        <img src="/images/tea-1.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/tea-1.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center space-y-3">
                         <h2 class="card-title text-3xl font-extrabold">Milk Tea</h2>
@@ -145,36 +145,134 @@
                         <p class="py-6">The meaning of gong cha is chanese is to provide the best tea to emperor
                             from all possessions . It represents the highest quality and self expectation.
                             Establishing in 2006, Gong cha had been deeply appreciated by its custoers because of
-                            good words of mouth and unique customized service orginated from Taiwan. It represents the highest quality and self expectation.
+                            good words of mouth and unique customized service orginated from Taiwan. It represents the
+                            highest quality and self expectation.
                             Establishing in 2006, Gong cha had been deeply appreciated by its custoers because of
                             good words of mouth and unique customized service orginated from Taiwan.</p>
                     </div>
                     <div>
                         <h3 class="text-2xl font-extrabold mb-3">Unique Taste</h3>
-                        <p>A Unique and different style from other teapots gives a luxurious and minimalist impression. <br> A Unique and different style from other teapots gives a luxurious.
+                        <p>A Unique and different style from other teapots gives a luxurious and minimalist impression.
+                            <br> A Unique and different style from other teapots gives a luxurious.
                         </p>
                     </div>
                     <div>
                         <h3 class="text-2xl font-extrabold mb-3">Premium Quality</h3>
-                        <p>Premium Quality that makes tea more elegant and more durable when you use it. Premium Quality <br> that makes tea more elegant and more durable when you use it.</p>
+                        <p>Premium Quality that makes tea more elegant and more durable when you use it. Premium Quality
+                            <br> that makes tea more elegant and more durable when you use it.
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Super client section -->
-        <section>
-            <div class="flex flex-col lg:flex-row gap-8 bg-gradient-to-r from-orange-500 to-red-600 p-10 rounded-xl">
-                <div class="text-white space-y-5">
+        <section class="my-24">
+            <div
+                class="flex flex-col lg:flex-row gap-8 items-center bg-gradient-to-r from-orange-500 to-red-600 p-10 rounded-xl">
+                <div class="text-white space-y-5 lg:pe-32">
                     <h1 class="text-5xl font-extrabold">Meet Our Super <br> Clients</h1>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. </p>
                     <button class="bg-white font-bold rounded text-orange-500 py-3 px-5">Show All</button>
                 </div>
-                <!-- review -->
-                <div class="bg-white p-10 rounded-xl space-y-4 relative">
-                    <img class="absolute -top-7 -left-7 border-4 border-white rounded-full" src="images/client.png" alt="">
-                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-                    <h3 class="font-bold">Ilham Yuda</h3>
-                    <p>Businessman</p>
+                <!-- review container -->
+                <div class="relative">
+                    <!-- next review -->
+                    <div class="bg-white p-10 mb-16 opacity-40 rounded-xl space-y-4 relative">
+                        <img class="absolute -top-7 -left-7 border-4 border-white rounded-full" src="images/client.png"
+                            alt="">
+                        <p>We are providing the best and suitable home insurance services for the people who are
+                            interested
+                            to treatment</p>
+                        <h3 class="font-bold">Ilham Yuda</h3>
+                        <p>Businessman</p>
+                        <div class="flex justify-end">
+                            <img src="images/circles.png" alt="">
+                        </div>
+                    </div>
+                    <!-- current review -->
+                    <div class="bg-white p-10 absolute top-44 lg:-left-36 rounded-xl lg:w-[500px] z-10 space-y-4">
+                        <img class="absolute -top-7 -left-7 border-4 border-white rounded-full" src="images/client.png"
+                            alt="">
+                        <p>We are providing the best and suitable home insurance services for the people who are
+                            interested
+                            to treatment</p>
+                        <h3 class="font-bold">Ilham Yuda</h3>
+                        <p>Businessman</p>
+                        <div class="flex justify-end">
+                            <img src="images/circles.png" alt="">
+                        </div>
+                    </div>
+                    <!-- previous review -->
+                    <div class="bg-white p-10 opacity-40 rounded-xl space-y-4 relative">
+                        <img class="absolute -top-7 -left-7 border-4 border-white rounded-full" src="images/client.png"
+                            alt="">
+                        <p>We are providing the best and suitable home insurance services for the people who are
+                            interested
+                            to treatment</p>
+                        <h3 class="font-bold">Ilham Yuda</h3>
+                        <p>Businessman</p>
+                        <div class="flex justify-end">
+                            <img src="images/circles.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- News & Events -->
+        <section class="my-24">
+            <div class="w-2/3 mx-auto text-center space-y-2 my-10">
+                <h1 class="text-5xl font-extrabold">News & Events</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable. </p>
+            </div>
+            <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-10">
+                <!-- cart-1 -->
+                <div class="card bg-base-100 border-2">
+                    <figure  class="px-5 pt-5">
+                        <img class="w-full" src="images/news-1.png" alt="Shoes"
+                            class="rounded-xl" />
+                    </figure>
+                    <div class="card-body">
+                        <p>Feb 05, 2027</p>
+                        <h3 class="card-title font-extrabold">Collecting 8 points for discount</h3>
+                        <p class="text-gray-600">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                            <a class="font-semibold" href="#">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- cart-2 -->
+                <div class="card bg-base-100 border-2">
+                    <figure class="px-5 pt-5">
+                        <img class="w-full" src="images/news-2.png" alt="Shoes"
+                            class="rounded-xl" />
+                    </figure>
+                    <div class="card-body">
+                        <p>Feb 05, 2027</p>
+                        <h3 class="card-title font-extrabold">Collecting 8 points for discount</h3>
+                        <p class="text-gray-600">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                            <a class="font-semibold" href="#">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- cart-3 -->
+                <div class="card bg-base-100 border-2">
+                    <figure class="px-5 pt-5">
+                        <img class="w-full" src="images/news-3.png" alt="Shoes"
+                            class="rounded-xl" />
+                    </figure>
+                    <div class="card-body">
+                        <p>Feb 05, 2027</p>
+                        <h3 class="card-title font-extrabold">Collecting 8 points for discount</h3>
+                        <p class="text-gray-600">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                            <a class="font-semibold" href="#">Learn More</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
