--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        "gradient-start": '#FF0000',
+                        "gradient-end" : "#FF8938",
                     }
                 }
             }
@@ -36,7 +37,7 @@
                         tea time at The <br>Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn text-white bg-gradient-to-r from-violet-500 to-fuchsia-500">Explore More <i
+                    <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end">Explore More <i
                             class="fa-solid fa-square-arrow-up-right"></i></button>
                 </div>
                 <div>
@@ -75,7 +76,7 @@
                         <h2 class="card-title text-3xl font-extrabold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                         <div class="card-actions">
-                            <button class="btn text-white bg-gradient-to-r from-violet-500 to-fuchsia-500">Buy
+                            <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end">Buy
                                 Now</button>
                         </div>
                     </div>
@@ -89,7 +90,7 @@
                         <h2 class="card-title text-3xl font-extrabold">Black Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                         <div class="card-actions">
-                            <button class="btn text-white bg-gradient-to-r from-violet-500 to-fuchsia-500">Buy
+                            <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end">Buy
                                 Now</button>
                         </div>
                     </div>
@@ -103,7 +104,7 @@
                         <h2 class="card-title text-3xl font-extrabold">Lemon Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                         <div class="card-actions">
-                            <button class="btn text-white bg-gradient-to-r from-violet-500 to-fuchsia-500">Buy
+                            <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end">Buy
                                 Now</button>
                         </div>
                     </div>
@@ -117,7 +118,7 @@
                         <h2 class="card-title text-3xl font-extrabold">Green Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                         <div class="card-actions">
-                            <button class="btn text-white bg-gradient-to-r from-violet-500 to-fuchsia-500">Buy
+                            <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end">Buy
                                 Now</button>
                         </div>
                     </div>
@@ -231,9 +232,8 @@
             <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-10">
                 <!-- cart-1 -->
                 <div class="card bg-base-100 border-2">
-                    <figure  class="px-5 pt-5">
-                        <img class="w-full" src="images/news-1.png" alt="Shoes"
-                            class="rounded-xl" />
+                    <figure class="px-5 pt-5">
+                        <img class="w-full" src="images/news-1.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body">
                         <p>Feb 05, 2027</p>
@@ -247,8 +247,7 @@
                 <!-- cart-2 -->
                 <div class="card bg-base-100 border-2">
                     <figure class="px-5 pt-5">
-                        <img class="w-full" src="images/news-2.png" alt="Shoes"
-                            class="rounded-xl" />
+                        <img class="w-full" src="images/news-2.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body">
                         <p>Feb 05, 2027</p>
@@ -262,8 +261,7 @@
                 <!-- cart-3 -->
                 <div class="card bg-base-100 border-2">
                     <figure class="px-5 pt-5">
-                        <img class="w-full" src="images/news-3.png" alt="Shoes"
-                            class="rounded-xl" />
+                        <img class="w-full" src="images/news-3.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body">
                         <p>Feb 05, 2027</p>
@@ -278,8 +276,50 @@
         </section>
     </main>
     <!-- footer -->
-    <footer>
-
+    <footer class="bg-base-200 p-10">
+        <div class="flex container justify-between my-16 mx-auto">
+            <img src="images/cup.png" alt="">
+            <div class="flex gap-4 justify-center items-center">
+                <p>Ready to get strated?</p>
+                <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get Started</button>
+            </div>
+        </div>
+        <div class="footer text-base-content container mx-auto justify-between">
+            <nav>
+                <h6 class="footer-title">Services</h6>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Company</h6>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Legal</h6>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+            <form>
+                <h6 class="text-2xl font-semibold">Subscribe to our <br> newsletter</h6>
+                <fieldset class="form-control w-80">
+                    <div class="">
+                        <input type="text" placeholder="username@site.com" class="p-3 rounded outline-none bg-transparent border-b-2 border-gray-900" />
+                        <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end join-item text-white"><i class="fa-solid fa-caret-right"></i></button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div class="text-center mt-20 mb-5">
+            <aside>
+                <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+            </aside>
+        </div>
     </footer>
 </body>
 
